# Zaviv-Type

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts  zaviv-type-snippets.json
.claude/: settings.local.json.prunade-bak-1783116192
.prunade/: MEMORY.md  memory.jsonl
HyperType_Logo_Assets/: README.md
docs/superpowers/plans/: 2026-06-30-shortcut-triggers.md  2026-07-02-paste-optimization.md
docs/superpowers/specs/: 2026-06-30-shortcut-triggers-design.md  2026-07-02-paste-optimization-design.md
installer/: Cargo.toml  build.rs
installer/src/: main.rs
my_config/: HyperType-snippets.json
src/: App.tsx  styles.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  consts.rs  engine.rs  ipc.rs  keyboard.rs  logging.rs  main.rs  platform.rs  shortcuts.rs  snippets.rs  storage.rs
src-tauri/src/expansion/: clipboard.rs  e2e_tests.rs  inject.rs  mod.rs
src/lib/: ipc.ts  shortcut.ts
website/: index.html  package.json  pnpm-lock.yaml
website/src/: App.tsx  index.css
website/src/components/: AppMock.tsx  CheckoutNotice.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx
