[package]
name = "hypertype-installer"
version = "1.0.5"
edition = "2021"
description = "One-click installer for HyperType. Embeds the release exe; no NSIS/WiX."

[[bin]]
name = "HyperTypeSetup"
path = "src/main.rs"

[dependencies]
mslnk = "0.1"
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
